# VMProver

./: Kernel_knowledge.md
VM_client/: CMakeCache.txt  CMakeLists.txt  Makefile  VM_client  VM_client.cbp  a.out  a.txt  client.cpp  cmake_install.cmake  cmp_file.cpp  cmp_file.h  definition.h  getTxt.cpp  lsmod.txt  module.cpp  process_list.cpp  process_list.h  ps.txt  tree.txt  wrap.cpp
VM_server/: CMakeCache.txt  CMakeLists.txt  CustomArtProv.cpp  CustomArtProv.h  Features.cpp  Features.h  Features.vmp  FileTree.cpp  Makefile  ModuleList.cpp  ModuleList.h  PanelFile.cpp  PanelModule.cpp  PanelProcess.cpp  PanelVM.h  PanelWelcome.h  ProcessTree.cpp  Profile.cpp  Profile.h  ProfileMain.cpp  SettingMain.cpp  SettingsPanel.h  VMList.cpp  VMStatusBar.cpp  VMStatusBar.h  VM_server.cbp  VMdefendor.cpp  VMdefendor.h  VMdefendorFrame.cpp  VMdefendorFrame.h  WorkerProcess.cpp  WorkerProcess.h  a.out  cmake_install.cmake  cmp_file.cpp  definition.h  getTxt.cpp  lsmod.txt  main.cpp  module.cpp  (+5 more)
VM_server/rc/: VMdefendor.xpm
rc/: resource.rc
rc/icon/: icon.docx  l.txt  process_error.xpm
